shared/wordpress/mysql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  # namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  type: ClusterIP

---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  # namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          resources:
          ports:
            - containerPort: 3306
              name: mysql
