shared/wordpress/wordpress-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  # namespace: wordpress
  labels:
    app: wordpress
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081 #porta POD
      targetPort: 80 #porta CONTAINER
      #nodePort: 30005
  selector:
    app: wordpress
    tier: frontend


---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  # namespace: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
        - image: wordpress:4.8-apache
          name: wordpress
          resources:
          ports:
            - containerPort: 80
              name: wordpress
